WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
205419
IPC::Connection::sendMessage() should use CRASH_WITH_INFO()
https://bugs.webkit.org/show_bug.cgi?id=205419
Summary
IPC::Connection::sendMessage() should use CRASH_WITH_INFO()
David Kilzer (:ddkilzer)
Reported
2019-12-18 15:07:20 PST
IPC::Connection::sendMessage() should use CRASH_WITH_INFO() to encode kern_return_t error code and hash of message name. <
rdar://problem/58058661
>
Attachments
Patch v1
(2.02 KB, patch)
2019-12-18 15:11 PST
,
David Kilzer (:ddkilzer)
no flags
Details
Formatted Diff
Diff
Patch v2
(2.03 KB, patch)
2019-12-18 15:25 PST
,
David Kilzer (:ddkilzer)
no flags
Details
Formatted Diff
Diff
Patch for landing
(1.99 KB, patch)
2020-01-08 10:35 PST
,
David Kilzer (:ddkilzer)
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
David Kilzer (:ddkilzer)
Comment 1
2019-12-18 15:11:31 PST
Created
attachment 386014
[details]
Patch v1
David Kilzer (:ddkilzer)
Comment 2
2019-12-18 15:25:12 PST
Created
attachment 386018
[details]
Patch v2
Mark Lam
Comment 3
2019-12-18 15:49:47 PST
Comment on
attachment 386018
[details]
Patch v2 View in context:
https://bugs.webkit.org/attachment.cgi?id=386018&action=review
> Source/WebKit/Platform/IPC/cocoa/ConnectionCocoa.mm:277 > + WebKit::setCrashReportApplicationSpecificInformation((__bridge CFStringRef)[NSString stringWithFormat:@"Unhandled error code %x, message '%s'", kr, messageName.data()]);
nit: Might as well log messageName.hash() as well.
David Kilzer (:ddkilzer)
Comment 4
2020-01-08 10:35:50 PST
Created
attachment 387113
[details]
Patch for landing
David Kilzer (:ddkilzer)
Comment 5
2020-01-08 10:36:48 PST
Comment on
attachment 386018
[details]
Patch v2 View in context:
https://bugs.webkit.org/attachment.cgi?id=386018&action=review
>> Source/WebKit/Platform/IPC/cocoa/ConnectionCocoa.mm:277 >> + WebKit::setCrashReportApplicationSpecificInformation((__bridge CFStringRef)[NSString stringWithFormat:@"Unhandled error code %x, message '%s'", kr, messageName.data()]); > > nit: Might as well log messageName.hash() as well.
Done. Thanks!
WebKit Commit Bot
Comment 6
2020-01-08 11:26:11 PST
Comment on
attachment 387113
[details]
Patch for landing Clearing flags on attachment: 387113 Committed
r254208
: <
https://trac.webkit.org/changeset/254208
>
WebKit Commit Bot
Comment 7
2020-01-08 11:26:13 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug