Cherry-pick r254208. rdar://problem/58559193

IPC::Connection::sendMessage() should use CRASH_WITH_INFO()
    <https://webkit.org/b/205419>
    <rdar://problem/58058661>

    Reviewed by Mark Lam.

    * Platform/IPC/cocoa/ConnectionCocoa.mm:
    (IPC::Connection::sendMessage):
    - Switch from CRASH() to CRASH_WITH_INFO().

    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254208 268f45cc-cd09-0410-ab3c-d52691b4dbfc

git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-609-branch@254599 268f45cc-cd09-0410-ab3c-d52691b4dbfc